# tinyembed

./: CMakeLists.txt  LICENSE  README.md  tinyembed.h  tinyembedConfig.cmake  tinyembedConfig.cmake.in  tinyembedMacros.cmake  tinyembedder.cc
